# bti_projects

bti_precompute_test/: Cargo.toml  readme.md
bti_precompute_test/src/: main.rs
bti_splitter/: Cargo.toml  readme.md
bti_splitter/src/: main.rs
