[package]
name = "bti_precompute_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
roxmltree = "0.19.0"
serde_json = "1.0.117"
tokio = {version = "1.37.0", features = ["full"] }
zune-inflate = "0.2.54"
